// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of Tooltip location bottom 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="bottom"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipBottom tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className="tooltipTriangleBottom"
      contentEditable={false}
      direction="up"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleUp normal tooltipTriangleBottom"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stokeWidth": "2px",
            "stroke": "gray",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location bottomLeft 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="bottomLeft"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipBottomLeft tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className="tooltipTriangleBottomLeft"
      contentEditable={false}
      direction="up"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleUp normal tooltipTriangleBottomLeft"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stokeWidth": "2px",
            "stroke": "gray",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location bottomRight 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="bottomRight"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipBottomRight tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className="tooltipTriangleBottomRight"
      contentEditable={false}
      direction="up"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleUp normal tooltipTriangleBottomRight"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stokeWidth": "2px",
            "stroke": "gray",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location middle 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="middle"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipMiddleRight tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className="tooltipTriangleMiddleRight"
      contentEditable={false}
      direction="left"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleLeft normal tooltipTriangleMiddleRight"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stokeWidth": "2px",
            "stroke": "gray",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location middleLeft 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="middleLeft"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipMiddleLeft tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className="tooltipTriangleMiddleLeft"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleRight normal tooltipTriangleMiddleLeft"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stokeWidth": "2px",
            "stroke": "gray",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location middleRight 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="middleRight"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipMiddleRight tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className="tooltipTriangleMiddleRight"
      contentEditable={false}
      direction="left"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleLeft normal tooltipTriangleMiddleRight"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stokeWidth": "2px",
            "stroke": "gray",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location none 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className=""
      contentEditable={false}
      direction="down"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleDown normal"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stokeWidth": "2px",
            "stroke": "gray",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location top 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="top"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipTop tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className="tooltipTriangleTop"
      contentEditable={false}
      direction="down"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleDown normal tooltipTriangleTop"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stokeWidth": "2px",
            "stroke": "gray",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location topLeft 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="topLeft"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipTopLeft tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className="tooltipTriangleTopLeft"
      contentEditable={false}
      direction="down"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleDown normal tooltipTriangleTopLeft"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stokeWidth": "2px",
            "stroke": "gray",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location topRight 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="topRight"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipTopRight tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      className="tooltipTriangleTopRight"
      contentEditable={false}
      direction="down"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
      testing={true}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleDown normal tooltipTriangleTopRight"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stokeWidth": "2px",
            "stroke": "gray",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of a Tooltip control 1`] = `
<div
  className="ui-tooltip tooltip tooltipMiddleRight tooltipShow inherit test-class"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
>
  <span
    className="ui-tooltip-content inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  >
    <span>
      Test Text
    </span>
  </span>
  <Triangle
    className="tooltipTriangleMiddleRight"
    contentEditable={false}
    direction="left"
    disabled={false}
    focus={false}
    height=""
    id=""
    location="none"
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    selected={false}
    sizing="normal"
    style={
      Object {
        "fill": "gray",
        "stroke": "gray",
      }
    }
    testing={true}
    visible={true}
    width=""
  />
</div>
`;

exports[`Test disabling of a Tooltip 1`] = `
<div
  className="ui-tooltip tooltip tooltipMiddleRight tooltipHide inherit disabled nohover"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
>
  <span
    className="ui-tooltip-content inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  />
  <Triangle
    className="tooltipTriangleMiddleRight"
    contentEditable={false}
    direction="left"
    disabled={false}
    focus={false}
    height=""
    id=""
    location="none"
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    selected={false}
    sizing="normal"
    style={
      Object {
        "fill": "gray",
        "stroke": "gray",
      }
    }
    testing={true}
    visible={true}
    width=""
  />
</div>
`;

exports[`Test making a Tooltip invisible 1`] = `
<div
  className="ui-tooltip tooltip tooltipMiddleRight tooltipHide inherit invisible"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
>
  <span
    className="ui-tooltip-content inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
  />
  <Triangle
    className="tooltipTriangleMiddleRight"
    contentEditable={false}
    direction="left"
    disabled={false}
    focus={false}
    height=""
    id=""
    location="none"
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    selected={false}
    sizing="normal"
    style={
      Object {
        "fill": "gray",
        "stroke": "gray",
      }
    }
    testing={true}
    visible={true}
    width=""
  />
</div>
`;

exports[`Test retrieval of Tooltip props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "location": "middleRight",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "selected": false,
  "show": false,
  "sizing": "inherit",
  "style": Object {
    "backgroundColor": "gray",
    "color": "white",
  },
  "testing": true,
  "visible": true,
  "width": "",
}
`;
